# yolo-pcb

./: .gitignore  README.md  best0204.pt  best0205.pt  best0206_1_1952.pt  best0206_3.pt  labelme_to_yolo.py  main.py  pyproject.toml  test.py  yolo-pcb copy 2.yaml  yolo-pcb copy 3.yaml  yolo-pcb copy 4.yaml  yolo-pcb copy.yaml  yolo-pcb_0204.yaml  yolo-pcb_0205.yaml  yolo-pcb_0205_2.yaml  yolo-pcb_0206_1.yaml  yolo-pcb_0206_2.yaml  yolo-pcb_0206_3.yaml  yolo-pcb_0206_4.yaml  yolo-pcb_0207.yaml  yolo-pcb_0320.yaml  yolov11.py
gt-dataset/: 09_LF_10358V057801_MEG17.9.21_TOP_0_4.json  11_LF_1035202216_MEG17.9.21_TOP_1_1.json  15_LF_1035202406_DCU17PC43_TOP_1_1.json  16_LF_1035202530_MEG17.9.21_BOT_0_4.json  17_LF_1035202530_MEG17.9.21_TOP_1_2.json  19_LF_1035202756_MEG17.9.21_BOT2_0_4.json  20_LF_1035202756_MEG17.9.21_TOP_0_2.json  21_LF_1038402544_MEG17.9.21_TOP_0_2.json  21_LF_1038402544_MEG17.9.21_TOP_0_3.json  24_LF_1038407930_DCU17PC42_BOT_0_0.json  26_LF_1038408590_MEG17.9.21_BOT_0_0.json  26_LF_1038408590_MEG17.9.21_BOT_0_4.json  27_LF_1038408590_MEG17.9.21_TOP_0_4.json  27_LF_1038408590_MEG17.9.21_TOP_1_4.json  30_LF_1038408692_MEG17.9.21_BOT_1_0.json  30_LF_1038408692_MEG17.9.21_BOT_1_3.json  31_LF_1038408692_MEG17.9.21_TOP_0_2.json  31_LF_1038408692_MEG17.9.21_TOP_0_3.json  31_LF_1038408692_MEG17.9.21_TOP_0_4.json  31_LF_1038408692_MEG17.9.21_TOP_0_5.json  32_LF_1038408766_MEG17.9.21_BOT_1_4.json  32_LF_1038408766_MEG17.9.21_BOT_1_5.json  33_LF_1038408766_MEG17.9.21_TOP_0_2.json  33_LF_1038408766_MEG17.9.21_TOP_0_5.json  33_LF_1038408766_MEG17.9.21_TOP_1_3.json  (+36 more)
(+534 files in other folders)
