[project]
name = "new-yolo"
version = "0.1.0"
description = ""
authors = [
    {name = "aesthetics-of-record"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.3.70,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
